--- a/index.html
+++ b/index.html
@@ -6,31 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Peñas flamencas en Cádiz</title>
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="assets/css/all.min.css">
   <!-- Leaflet CSS -->
   <link href="assets/css/leaflet.css" rel="stylesheet" type="text/css">
+  <!-- Font Awesome -->
+  <link href="assets/css/all.min.css" rel="stylesheet" type="text/css">
+  <!-- Marker Cluster CSS -->
   <link rel="stylesheet" type="text/css" href="assets/css/MarkerCluster.css">
   <link rel="stylesheet" type="text/css" href="assets/css/MarkerCluster.Default.css">
+  <!-- Map CSS -->
   <link rel="stylesheet" type="text/css" href="assets/css/map.css">
 </head>
 
 <body>
   <noscript> Debe de activar el JavaScript</noscript>
-  <div id="map">
-    
-  </div>
+  <div id="map"></div>
 
   <!-- SCRIPTS -->
-  <!-- JQuery -->
-  <script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
   <!-- Leaflet JS -->
   <script type="text/javascript" src="assets/js/leaflet.js"></script>
-  <!-- Leaflet JS -->
+  <!-- Marker Cluster JS -->
   <script type="text/javascript" src="assets/js/leaflet.markercluster.js"></script>
-  <!-- Leaflet JS -->
+  <!-- Datos peñas flamencas JS -->
   <script type="text/javascript" src="assets/js/penasFlamencas.js"></script>
-  <!-- Mi Script -->
+  <!-- Map JS -->
   <script type="text/javascript" src="assets/js/map.js"></script>
 </body>
 
